hphp/test/quick/strict_type_bad_value.hhas.expectf
Fatal error: Assembler Error: line 3: Strict types must be either 1 or 0 in %s on line -1
